[package]
name = "sendstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'